Update Python I2P library version 0.91 by sunshine
Monotone-Parent: 44142ac234a436bac2cd786192ae8ab7fb66d19a
Monotone-Revision: e5b2645c23ddb138ea3f93b055309a9dc06bff42

Monotone-Author: sunshine
Monotone-Date: 2004-08-02T14:52:39
Monotone-Branch: i2p.i2p

--- a/apps/sam/python/todo.txt
+++ b/apps/sam/python/todo.txt
@@ -10,4 +10,4 @@ Todo:
   Try closing a stream at one end, and make sure the other
   end gets all the data sent before closing.
 * Make an event-based socket class.
-  (doesn't need to be asyncore -- but perhaps model it).
+  (eg asyncore).
