2004-09-02  jrandom     * Cleaned up the base build.xml, adding a new target ("updater") which       builds the file i2pupdate.tar.bz2 which can be safely extracted over       existing installs.
Monotone-Parent: b5e97b0240a11c7855b4a3f6cca6e972ce01892c
Monotone-Revision: b8a7d769e97356d0ffc8adfd7b643907f5f8dc72

Monotone-Author: jrandom
Monotone-Date: 2004-09-02T21:26:03
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id$
+$Id: history.txt,v 1.1 2004/09/02 15:00:28 jrandom Exp $
+
+2004-09-02  jrandom
+    * Cleaned up the base build.xml, adding a new target ("updater") which 
+      builds the file i2pupdate.tar.bz2 which can be safely extracted over 
+      existing installs.
 
 2004-xx-xx  jrandom
     * Implemented the new web architecture and router console
