2004-09-03  hypercubus     * Bugfix: Installer launches postinstall.bat on WinNT/2K properly.     * Temporarily removed install_i2p_service_unix and       uninstall_i2p_service_unix from distribution packages.     * postinstall.bat/postinstall.sh cleans installation directory of all files       not applicable to the host OS.
Monotone-Parent: 11d8e8384400d5a6000ae3daac03e96912d71619
Monotone-Revision: 030e3add5522a109ca4d667ae596f9b673e05da5

Monotone-Author: hypercubus
Monotone-Date: 2004-09-03T16:52:27
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.2 2004/09/02 16:26:03 jrandom Exp $
+$Id: history.txt,v 1.3 2004/09/03 02:22:24 jrandom Exp $
+
+2004-09-03  hypercubus
+    * Bugfix: Installer launches postinstall.bat on WinNT/2K properly.
+    * Temporarily removed install_i2p_service_unix and
+      uninstall_i2p_service_unix from distribution packages.
+    * postinstall.bat/postinstall.sh cleans installation directory of all files
+      not applicable to the host OS.
 
 2004-09-03  oOo
     * Added some filters to the HTTP request, replacing the User-Agent,
