--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.3 2004/09/03 02:22:24 jrandom Exp $
+$Id: history.txt,v 1.4 2004/09/03 11:52:27 hypercubus Exp $
+
+* 2004-09-03  0.4 released
+
+2004-09-03  jrandom
+    * Updated default wrapper.config to deal with the hard restart option
+    * Include the history.txt in the /help.jsp page
+    * HTML updates (wrapper.log, and no more unix scripts)
+    * Updated VERSION constants to 0.4
 
 2004-09-03  hypercubus
     * Bugfix: Installer launches postinstall.bat on WinNT/2K properly.
