2004-09-04  jrandom     * Update the SDK to automatically reconnect indefinitely with an       exponential delay on retries (capped at 5 minutes).
Monotone-Parent: 721ac523d71eb6201c52da4315b44b177182ac5c
Monotone-Revision: a1327add50a87dbf307b9c947d92f1201dd46390

Monotone-Author: jrandom
Monotone-Date: 2004-09-04T05:41:42
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.4 2004/09/03 11:52:27 hypercubus Exp $
+$Id: history.txt,v 1.5 2004/09/03 14:46:08 jrandom Exp $
+
+2004-09-04  jrandom
+    * Update the SDK to automatically reconnect indefinitely with an 
+      exponential delay on retries (capped at 5 minutes).
 
 * 2004-09-03  0.4 released
 
