--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.11 2004/09/07 04:49:02 jrandom Exp $
+$Id: history.txt,v 1.12 2004/09/07 17:13:12 jrandom Exp $
+
+2004-09-07  cervantes:
+    * Proxy recursion disabled by default (strict)
+    * Password Authentication for session commands
+    * Support for http://path?i2paddresshelper=BASE64
+    * Support for http://i2p/BASE64/path syntax
 
 2004-09-07  jrandom
     * Make sure that peers placed in the 'fast' group are ones we both know
