2004-09-13  jrandom     * Update for the SDK reconnection to deal with overflow.     * Web improvements (@ not # on the /logs.jsp [thanks ugha!] and fixed the       rounding on lifetime bandwidth used [thanks gott!]).
Monotone-Parent: fce9222def7c27a0251ee3ede7faa1691c4aaba7
Monotone-Revision: 9691cb41f06e6adb20c3a56585cf34fa4cf42810

Monotone-Author: jrandom
Monotone-Date: 2004-09-13T03:08:16
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.15 2004/09/08 17:15:43 hypercubus Exp $
+$Id: history.txt,v 1.16 2004/09/08 21:26:43 jrandom Exp $
+
+2004-09-13  jrandom
+    * Update for the SDK reconnection to deal with overflow.
+    * Web improvements (@ not # on the /logs.jsp [thanks ugha!] and fixed the 
+      rounding on lifetime bandwidth used [thanks gott!]).
 
 * 2004-09-08  0.4.0.1 released
 
