2004-09-21  jrandom     * Have two tiers of hosts.txt files - the standard "hosts.txt" and       the new "userhosts.txt".  Updates to I2P will only overwrite the former,       but values stored in the later take precedence.  Both are queried on       lookup.
Monotone-Parent: 3957a4b056e86d43dd56cd259ea4c2cadea32300
Monotone-Revision: 96bb25171c7e61e077e59f3f2772a5f791438eb7

Monotone-Author: jrandom
Monotone-Date: 2004-09-22T00:10:26
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.17 2004/09/12 22:08:17 jrandom Exp $
+$Id: history.txt,v 1.18 2004/09/16 18:55:12 jrandom Exp $
+
+2004-09-21  jrandom
+    * Have two tiers of hosts.txt files - the standard "hosts.txt" and
+      the new "userhosts.txt".  Updates to I2P will only overwrite the former,
+      but values stored in the later take precedence.  Both are queried on
+      lookup.
 
 2004-09-16  jrandom
     * Refactor the TCP transport to deal with changing identities gracefully,
