2004-09-29  jrandom     * Always wipe the Jetty work directory on startup, so that web updates       are reflected immediately (Jetty does not honor the cache across       multiple executions) in addition, refactor various file ops out of the DataHelper into FileUtil
Monotone-Parent: fdb8ad8a218055532e5f02bb3c9644e7bff6a6e4
Monotone-Revision: 6cfc04d85231a557c48a18d8c39715943236056e

Monotone-Author: jrandom
Monotone-Date: 2004-09-29T19:34:02
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.20 2004/09/26 10:16:44 jrandom Exp $
+$Id: history.txt,v 1.21 2004/09/27 02:57:43 jrandom Exp $
+
+2004-09-29  jrandom
+    * Always wipe the Jetty work directory on startup, so that web updates
+      are reflected immediately (Jetty does not honor the cache across
+      multiple executions)
 
 2004-09-27  jrandom
     * Limit the number of connection tags saved to 10,000.  This is a huge 
