2004-09-30  jrandom     * Bundle the configuration necessary to run an eepsite out of the box       with Jetty - simply edit ./eepsite/docroot/index.html and give people       the key listed on the I2PTunnel configuration page, and its up. plus minor bugfixes / refactoring / logging
Monotone-Parent: b832f865adf75436d2d1a1bd1656ac62b00b1312
Monotone-Revision: acd0516066ef9eb6424762e787fd4a6316515479

Monotone-Author: jrandom
Monotone-Date: 2004-09-30T06:57:22
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.21 2004/09/27 02:57:43 jrandom Exp $
+$Id: history.txt,v 1.22 2004/09/29 14:34:02 jrandom Exp $
+
+2004-09-30  jrandom
+    * Bundle the configuration necessary to run an eepsite out of the box
+      with Jetty - simply edit ./eepsite/docroot/index.html and give people
+      the key listed on the I2PTunnel configuration page, and its up.
 
 2004-09-29  jrandom
     * Always wipe the Jetty work directory on startup, so that web updates
