2004-10-01  jrandom     * Additional error handling for a variety of transport layer errors.
Monotone-Parent: fcc621ed3b4ca7eb2500711679c2689ea881b23d
Monotone-Revision: 60391dd27baaf524e80d3250d14840eabc9ebfa7

Monotone-Author: jrandom
Monotone-Date: 2004-10-01T09:39:14
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.23 2004/09/30 01:57:22 jrandom Exp $
+$Id: history.txt,v 1.24 2004/09/30 10:58:55 jrandom Exp $
+
+2004-10-01  jrandom
+    * Additional error handling for a variety of transport layer errors.
 
 * 2004-09-30  0.4.1 released (not backwards compatible)
 
