2004-10-02  jrandom     * Command line utility to verify a peer's reachability - simply run       net.i2p.router.transport.tcp.ConnectionHandler hostname port# and it       will print out whether that peer is reachable or not (using a simple       verification handshake).
Monotone-Parent: 7ead83d680373179900a8c1244ca5e346c090614
Monotone-Revision: 390883b8a1895a755f458d09531b18baafac0d32

Monotone-Author: jrandom
Monotone-Date: 2004-10-02T12:31:15
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.27 2004/10/01 09:35:49 jrandom Exp $
+$Id: history.txt,v 1.28 2004/10/01 12:23:00 jrandom Exp $
+
+2004-10-02  jrandom
+    * Command line utility to verify a peer's reachability - simply run
+      net.i2p.router.transport.tcp.ConnectionHandler hostname port# and it
+      will print out whether that peer is reachable or not (using a simple
+      verification handshake).
 
 * 2004-10-01  0.4.1.1 released
 
