2004-10-02  jrandom     * Assure that we quickly fail messages bound for shitlisted peers.     * Address a race on startup where the first peer contacted could hang the       router (thanks Romster!)     * Only whine about an intermittent inability to query the time server once
Monotone-Parent: 390883b8a1895a755f458d09531b18baafac0d32
Monotone-Revision: 29556d6192f5dcbfdd9d9ece8850f4674d77d43a

Monotone-Author: jrandom
Monotone-Date: 2004-10-02T19:05:24
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.28 2004/10/01 12:23:00 jrandom Exp $
+$Id: history.txt,v 1.29 2004/10/02 07:31:16 jrandom Exp $
+
+2004-10-02  jrandom
+    * Assure that we quickly fail messages bound for shitlisted peers.
+    * Address a race on startup where the first peer contacted could hang the
+      router (thanks Romster!)
+    * Only whine about an intermittent inability to query the time server once
 
 2004-10-02  jrandom
     * Command line utility to verify a peer's reachability - simply run
