2004-10-03  jrandom     * Add a new stat logging component to optionally dump the raw stats to       disk as they are generated, rather than rely upon the summarized data.       By default, this is off, but the router property "stat.logFilters" can       be set to a comma delimited list of stats (e.g. "client.sendAckTime")       which will be written to the file "stats.log" (or whatever the property       "stat.logFile" is set to).  This can also log profile related stats,       such as "dbResponseTime" or "tunnelTestResponseTime".
Monotone-Parent: 53dbfe3eaae4d2b724ea6dc43ccb6ceb06910837
Monotone-Revision: 41a37b0ab3c76db46cedf36b7d5581e905badf47

Monotone-Author: jrandom
Monotone-Date: 2004-10-03T20:48:43
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,13 @@
-$Id: history.txt,v 1.29 2004/10/02 07:31:16 jrandom Exp $
+$Id: history.txt,v 1.30 2004/10/02 14:05:24 jrandom Exp $
+
+2004-10-03  jrandom
+    * Add a new stat logging component to optionally dump the raw stats to 
+      disk as they are generated, rather than rely upon the summarized data.
+      By default, this is off, but the router property "stat.logFilters" can
+      be set to a comma delimited list of stats (e.g. "client.sendAckTime")
+      which will be written to the file "stats.log" (or whatever the property
+      "stat.logFile" is set to).  This can also log profile related stats,
+      such as "dbResponseTime" or "tunnelTestResponseTime".
 
 2004-10-02  jrandom
     * Assure that we quickly fail messages bound for shitlisted peers.
