2004-10-05  jrandom     * Don't go into a fast busy if an I2PTunnel 'server' is explicitly killed       (thanks mule!)     * Handle some more error conditions regarding abruptly closing sockets       (thanks Jonva!)
Monotone-Parent: a3c03964b249823527c619dad5add306b1db2b63
Monotone-Revision: f0b7cbde44e662ff5123b811eab779d6490f23c0

Monotone-Author: jrandom
Monotone-Date: 2004-10-05T15:38:37
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.31 2004/10/03 15:48:43 jrandom Exp $
+$Id: history.txt,v 1.32 2004/10/04 12:30:23 jrandom Exp $
+
+2004-10-05  jrandom
+    * Don't go into a fast busy if an I2PTunnel 'server' is explicitly killed
+      (thanks mule!)
+    * Handle some more error conditions regarding abruptly closing sockets 
+      (thanks Jonva!)
 
 2004-10-04  jrandom
     * Update the shitlist to reject a peer for an exponentially increasing 
