2004-10-05  jrandom     * Allow peers on the same LAN to communicate with each other safely even       when they cannot talk to each other through the external address.
Monotone-Parent: 828fd7db6dfadd3afdd4c5a173768db2bfaf6f31
Monotone-Revision: a5c8d692c4b503a54c4a701a7de9c4a27389eb81

Monotone-Author: jrandom
Monotone-Date: 2004-10-06T01:12:03
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.33 2004/10/05 10:38:37 jrandom Exp $
+$Id: history.txt,v 1.34 2004/10/05 14:21:47 jrandom Exp $
+
+2004-10-05  jrandom
+    * Allow peers on the same LAN to communicate with each other safely even
+      when they cannot talk to each other through the external address.
 
 2004-10-05  jrandom
     * Display how much time is left before the graceful shutdown is complete.
