2004-10-06  jrandom     * Enable explicit disabling of the systray entirely for windows machines       with strange configurations: add -Dsystray.disable=true to the java       command line.  (thanks mihi!)
Monotone-Parent: a5c8d692c4b503a54c4a701a7de9c4a27389eb81
Monotone-Revision: 37d1e4595ad35fdd9b4563a867cd4c9fd5b757b1

Monotone-Author: jrandom
Monotone-Date: 2004-10-06T13:23:38
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.34 2004/10/05 14:21:47 jrandom Exp $
+$Id: history.txt,v 1.35 2004/10/05 20:12:04 jrandom Exp $
+
+2004-10-06  jrandom
+    * Enable explicit disabling of the systray entirely for windows machines
+      with strange configurations: add -Dsystray.disable=true to the java 
+      command line.  (thanks mihi!)
 
 2004-10-05  jrandom
     * Allow peers on the same LAN to communicate with each other safely even
